--- a/app/src/main/res/menu/menu_order_list.xml
+++ b/app/src/main/res/menu/menu_order_list.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+            android:id="@+id/search_order"
+            android:icon="@android:drawable/ic_menu_search"
+            android:orderInCategory="100"
+            android:title="@string/search_label"
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
+            app:showAsAction="ifRoom"/>
 </menu>
